--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
   <div class="timeline">
-    <div class="timeline__content content">
-        <div class="content__info info content__info--first">
-            <div class="info__text text">
-                <div class="text__details details text__details--first">
+    <div class="timeline__content ">
+        <div class="content__info content__info--first">
+            <div class="info__text ">
+                <div class="info__text--first">
                     12th October, 2019 & 13th October, 2019
                 </div>
-                <div class="text__details details text__details--second">
+                <div class="info__text--second">
                     Start test anytime between 02:00 PM to 06:00 pm IST | Duration 4 Hours.
                 </div>
             </div>
         </div>
-        <div class="content__info info content__info--second">
+        <div class="content__info content__info--second">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class="info__text--first">
                     You can appear on both days. We will consider your best score for the selection process
                 </div>
             </div>
@@ -32,17 +32,17 @@
      <div class="timeline__content content">
         <div class="content__info info content__info--first">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class="info__text--first">
                     16th October,2019
                 </div>
-                <div class="text__details details text__details--second">
+                <div class="info__text--second">
                     (END OF THE DAY)
                 </div>
             </div>
         </div>
         <div class="content__info info content__info--second">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class="info__text--first">
                     Premilinary Result Announced
                 </div>
             </div>
@@ -51,14 +51,14 @@
      <div class="timeline__content content">
         <div class="content__info info content__info--first">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class=" info__text--first">
                     17th,16th October,2019
                 </div>
             </div>
         </div>
         <div class="content__info info content__info--second">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class="info__text--first">
                     Schedule online personal interview
                 </div>
             </div>
@@ -67,14 +67,14 @@
      <div class="timeline__content content">
         <div class="content__info info content__info--first">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class=" info__text--first">
                     17th,16th October,2019
                 </div>
             </div>
         </div>
         <div class="content__info info content__info--second">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class=" info__text--first">
                     Online personal Interview
                 </div>
             </div>
@@ -83,17 +83,17 @@
      <div class="timeline__content content">
         <div class="content__info info content__info--first">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class=" info__text--first">
                     20th October,2019
                 </div>
-                <div class="text__details details text__details--second">
+                <div class=" info__text--second">
                     (END OF THE DAY)
                 </div>
             </div>
         </div>
         <div class="content__info info content__info--second">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class="info__text--first">
                    Final Result Announcement
                 </div>
             </div>
@@ -102,14 +102,14 @@
      <div class="timeline__content content">
         <div class="content__info info content__info--first">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class="info__text--first">
                     21st October,2019
                 </div>
             </div>
         </div>
         <div class="content__info info content__info--second">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class="info__text--first">
                     OnBoarding Webinar
                 </div>
             </div>
@@ -118,14 +118,14 @@
      <div class="timeline__content content">
         <div class="content__info info content__info--first">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class="info__text--first">
                     22nd October to 27th October,2019
                 </div>
             </div>
         </div>
         <div class="content__info info content__info--second">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class="info__text--first">
                     Schdeule 1st session with your mentor
                 </div>
             </div>
@@ -134,14 +134,14 @@
      <div class="timeline__content content">
         <div class="content__info info content__info--first">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class="info__text--first">
                     28th October,2019
                 </div>
             </div>
         </div>
         <div class="content__info info content__info--second">
             <div class="info__text text">
-                <div class="text__details details text__details--first">
+                <div class="info__text--first">
                     Scaler Day 1
                 </div>
             </div>
