--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 
      <div class="timeline__content content">
-        <div class="content__info info content__info--first">
+        <div class="content__info content__info--first">
             <div class="info__text text">
                 <div class="info__text--first">
                     16th October,2019
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </div>
-        <div class="content__info info content__info--second">
+        <div class="content__info content__info--second">
             <div class="info__text text">
                 <div class="info__text--first">
                     Premilinary Result Announced
@@ -49,14 +49,14 @@
         </div>
     </div>
      <div class="timeline__content content">
-        <div class="content__info info content__info--first">
+        <div class="content__info content__info--first">
             <div class="info__text text">
                 <div class=" info__text--first">
                     17th,16th October,2019
                 </div>
             </div>
         </div>
-        <div class="content__info info content__info--second">
+        <div class="content__info content__info--second">
             <div class="info__text text">
                 <div class="info__text--first">
                     Schedule online personal interview
@@ -65,14 +65,14 @@
         </div>
     </div>
      <div class="timeline__content content">
-        <div class="content__info info content__info--first">
+        <div class="content__info content__info--first">
             <div class="info__text text">
                 <div class=" info__text--first">
                     17th,16th October,2019
                 </div>
             </div>
         </div>
-        <div class="content__info info content__info--second">
+        <div class="content__info content__info--second">
             <div class="info__text text">
                 <div class=" info__text--first">
                     Online personal Interview
@@ -81,7 +81,7 @@
         </div>
     </div>
      <div class="timeline__content content">
-        <div class="content__info info content__info--first">
+        <div class="content__info content__info--first">
             <div class="info__text text">
                 <div class=" info__text--first">
                     20th October,2019
@@ -91,7 +91,7 @@
                 </div>
             </div>
         </div>
-        <div class="content__info info content__info--second">
+        <div class="content__info content__info--second">
             <div class="info__text text">
                 <div class="info__text--first">
                    Final Result Announcement
@@ -100,14 +100,14 @@
         </div>
     </div>
      <div class="timeline__content content">
-        <div class="content__info info content__info--first">
+        <div class="content__info content__info--first">
             <div class="info__text text">
                 <div class="info__text--first">
                     21st October,2019
                 </div>
             </div>
         </div>
-        <div class="content__info info content__info--second">
+        <div class="content__info content__info--second">
             <div class="info__text text">
                 <div class="info__text--first">
                     OnBoarding Webinar
@@ -116,14 +116,14 @@
         </div>
     </div>
      <div class="timeline__content content">
-        <div class="content__info info content__info--first">
+        <div class="content__info content__info--first">
             <div class="info__text text">
                 <div class="info__text--first">
                     22nd October to 27th October,2019
                 </div>
             </div>
         </div>
-        <div class="content__info info content__info--second">
+        <div class="content__info content__info--second">
             <div class="info__text text">
                 <div class="info__text--first">
                     Schdeule 1st session with your mentor
@@ -132,14 +132,14 @@
         </div>
     </div>
      <div class="timeline__content content">
-        <div class="content__info info content__info--first">
+        <div class="content__info content__info--first">
             <div class="info__text text">
                 <div class="info__text--first">
                     28th October,2019
                 </div>
             </div>
         </div>
-        <div class="content__info info content__info--second">
+        <div class="content__info content__info--second">
             <div class="info__text text">
                 <div class="info__text--first">
                     Scaler Day 1
